Working towards HIV group presentation slides

--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -3,7 +3,7 @@
 This is the e-book version of my PhD thesis, to be submitted to Imperial College London in accordance with the requirements of the degree of Doctor of Philosophy in Modern Statistics and Statistical Machine Learning.
 If you would prefer, you can view the [PDF version](https://athowes.github.io/thesis/main.pdf).
 The associated GitHub repository for this thesis is [`athowes/thesis`](https://github.com/athowes/thesis).
-A concise introduction to the work is available via my thesis defense [slides](https://athowes.github.io/thesis/slides.pdf).
+A concise introduction to the work is available via my thesis defense [slides](https://athowes.github.io/thesis/slides.pdf), or (slightly less concise) longer [slides](https://athowes.github.io/thesis/slides-long.pdf) for a lab group meeting.
 The [corrections](https://athowes.github.io/thesis/correct.pdf) for this thesis are also available online.
 If you notice any typos or other issues with the work, feel free to open an [issue](https://github.com/athowes/thesis/issues) on GitHub, or submit a pull request.
 
