--- a/slides/slides-long.Rmd
+++ b/slides/slides-long.Rmd
@@ -18,13 +18,71 @@ output:
 
 #
 
+**Bayesian**
+
+Use probability distributions for all unknowns
+
+#
+
+```{r conjugate, echo=FALSE, out.width="100%"}
+knitr::include_graphics("../figures/bayesian/conjugate.png")
+```
+
+#
+
+**Spatio-temporal**
+
+Observed data has spatial and temporal location
+
+#
+
+```{r st, echo=FALSE, out.width="100%"}
+knitr::include_graphics("../figures/bayesian/st.png")
+```
+
+#
+
+**Small-area estimation**
+
+Sample size for demographic subgroups too small for precise direct estimates
+
+#
+
+```{r zmb-maps, echo=FALSE, out.width="85%"}
+knitr::include_graphics("../figures/bayesian/zmb-maps.png")
+```
+
+#
+
+```{r zmb-scatter, echo=FALSE, out.width="85%"}
+knitr::include_graphics("../figures/bayesian/zmb-scatter.png")
+```
+
+
+#
+
+**Toy example! But same principle applies to real models**
+
+e.g. Naomi^[See [C.4 Simplified Naomi model description](https://athowes.github.io/thesis/naomi-aghq-appendix.html#naomi-math)] [@eaton2021naomi; @esra2024improved].
+
+#
+
 ```{r naomi-continent, echo=FALSE, out.width="95%"}
 knitr::include_graphics("../figures/hiv-aids/naomi-continent.png")
 ```
 
 #
 
-```{r besag, echo=FALSE, out.width="70%", fig.align = 'center'}
+**Nearby things tend to be similar**
+
+Supposing prior correlation structure between observations!
+
+#
+
+Gaussian Markov random field model of @besag1991bayesian:\
+\
+
+```{r besag, echo=FALSE, out.width="60%", fig.align = 'center'}
 knitr::include_graphics("besag.png")
 ```
 
@@ -80,8 +138,32 @@ knitr::include_graphics(paste0("../resources/multi-agyw/", resource_version, "/d
 
 #
 
+**Since extended to include 1) males, 2) additional countries**
+
+See the sub-national HIV estimates in priority populations UNAIDS tool at [`hivtools.unaids.org/shipp/`](https://hivtools.unaids.org/shipp/)
+
+#
+
+```{r stan, echo=FALSE, out.width="100%"}
+knitr::include_graphics("../figures/bayesian/stan.png")
+```
+
+#
+
+```{r epil, echo=FALSE, out.width="80%", fig.align = 'center'}
+knitr::include_graphics("../figures/naomi-aghq/epil.png")
+```
+
+#
+
 ```{r intercept-comparison, echo=FALSE, out.width="80%", fig.align = 'center'}
 knitr::include_graphics("../figures/naomi-aghq/intercept-comparison.png")
+```
+
+#
+
+```{r loa-loa-data, echo=FALSE, out.width="80%", fig.align = 'center'}
+knitr::include_graphics("../figures/naomi-aghq/loa-loa-data.png")
 ```
 
 #
@@ -111,15 +193,13 @@ knitr::include_graphics(paste0("../resources/naomi-aghq/", resource_version, "/d
 
 # Acknowledgements
 
-Thanks to:
-
-| Collaborator  | Affiliation       |
+| Collaborator(s)  | Affiliation       |
 | ------------- | ----------------- |
-| Jeff Eaton    | Harvard, Imperial |
+| Jeff Eaton    | Imperial, Harvard |
 | Seth Flaxman  | Oxford            |
 | Alex Stringer | Waterloo          |
 | HIV Inference Group | Imperial    |
 | Machine Learning and Global Health Network | Worldwide |
 | StatML CDT  | Imperial, Oxford    |
 
-<!-- # References {.allowframebreaks} -->
+# References {.allowframebreaks}
