Typo with i and j index on Hajek estimator

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -541,7 +541,7 @@ Multiplying the design and nonresponse weights gives survey weights $\omega_i = 
 
 Extending Equation \@ref(eq:direct), a weighted estimate [@hajek1971discussion] of the population mean using the survey weights $\omega_i$ is
 \begin{equation}
-\bar G_\omega = \frac{\sum_{i = 1}^N \omega_j R_i G(y_i)}{\sum_{i = 1}^N \omega_i R_i}. (\#eq:hajek)
+\bar G_\omega = \frac{\sum_{i = 1}^N \omega_i R_i G(y_i)}{\sum_{i = 1}^N \omega_i R_i}. (\#eq:hajek)
 \end{equation}
 Following @meng2018statistical and @bradley2021unrepresentative, decomposing the additive error $\bar G_\omega - \bar G$ of Equation \@ref(eq:hajek) provides useful intuition as to the benefits of survey weighting [@bailey2023new].
 Under SRS then, the error is a product of three terms
