Small changes to 1. Introduction on read through

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -67,12 +67,12 @@ It is applied and methodological in that the primary concern is real world quest
 The statistical approach is Bayesian because probability theory is used to arrive at conclusions based on models for observed data.
 
 The applied focus of this thesis is in obtaining the strategic information needed to plan the response to the HIV (human immunodeficiency virus) epidemic in sub-Saharan Africa (SSA).
-Over 40 years since the beginning of the epidemic, among non-infants HIV is the largest annual cause of disability adjusted life years (DALYs) in SSA [@ihme2019; Figure \@ref(fig:gbd)].
-Quantification of the epidemic using statistics is an important part of the public health response.
+Over 40 years since the beginning of the epidemic, HIV is the largest annual cause of disability adjusted life years (DALYs) among non-infants in SSA [@ihme2019; Figure \@ref(fig:gbd)].
+Quantification of the epidemic using statistics is a crucial part of the public health response.
 Effective implementation of HIV prevention and treatment requires strategic information.
 However, producing suitable estimates of relevant indicators is made difficult by a range of statistical challenges.
 
-(ref:gbd) HIV is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. Weights used to account for disability vary between 0 (full health) and 1 (death) depending on severity of the condition.
+(ref:gbd) HIV is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. Weights used to account for disability vary between 0 (full health) and 1 (death) depending on the severity of the condition.
 
 ```{r gbd, fig.cap="(ref:gbd)"}
 knitr::include_graphics("figures/introduction/gbd.png")
@@ -91,14 +91,15 @@ To facilitate reproducible research, the R package `orderly` [@orderly] was used
 
 This thesis is structured as follows:
 
-* Chapter \@ref(hiv-aids) provides an overview of the HIV/AIDS epidemic, and describes the challenges faced by disease surveillance efforts.
+* Chapter \@ref(hiv-aids) provides an overview of the HIV/AIDS epidemic, and describes the challenges faced by surveillance efforts.
 * Chapter \@ref(bayes-st) introduces the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
 * Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was intended to analyse a grid of pixels.
 In disease mapping, areas correspond to the administrative divisions of a country, which are typically not a grid.
-I used simulation and survey data studies to evaluate the practical consequences of this concern 
-* Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of acquiring HIV infection.
-The Global AIDS Strategy recommends prioritising interventions on the basis of behaviour to prevent the most new infections using available resources.
-I estimated the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assessed the potential benefits in terms of numbers of new infections prevented.
+I used simulation and survey data studies to evaluate the practical consequences of this concern. 
+* Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection.
+The Global AIDS Strategy recommends prioritising interventions on the basis of behaviour to prevent the most new infections using the limited available resources.
+I estimated the size of behavioural risk groups across priority countries to enable implementation of this strategy.
+Additionally, I assessed the potential benefits of the strategy in terms of numbers of new infections prevented.
 This work [@howes2023spatio] was included in the UNAIDS (Joint United Nations Programme on HIV/AIDS) Global AIDS Update 2022 and 2023.
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators.
 First, to allow for compatibility with Naomi, I implemented the integrated nested Laplace approximations using automatic differentiation, opening the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
