Free y-axis for overall picture plot, and small text changes to beginning of Chapter 2

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -66,9 +66,9 @@ global_fund <- round((24.2 + 5)) * 1e9
 
 <!-- A lot of effort going into it -->
 An ongoing global effort has been made to respond to the epidemic.
-The response has been multifaceted, shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme
+The multifaceted response has been shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme
 on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
-The investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022], indicating the scale of the response.
+As an indication as to the scale of the response, the investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022].
 
 ```{r}
 #' From https://www.unaids.org/en/resources/presscentre/featurestories/2021/september/20210906_global-roll-out-hiv-treatment
@@ -77,7 +77,7 @@ condom_infections_averted <- 117 * 1e6
 vmmc_infections_averted <- 340 * 1e3
 ```
 
-(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59%. Yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the global disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. The unit "M" refers to millions. The colour palette used in this figure, and throughout the thesis, is that of @okabe2008color. It is designed to be colourblind friendly, and the default in @wilke2019fundamentals.
+(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59%. Yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the global disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. The unit "M" refers to millions. The colour palette used in this figure, and throughout the thesis, is that of @okabe2008color. It is designed to be colourblind friendly, and the default used by @wilke2019fundamentals.
 
 ```{r overall-picture, fig.cap="(ref:overall-picture)"}
 knitr::include_graphics("figures/hiv-aids/overall-picture.png")
@@ -85,11 +85,11 @@ knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 
 <!-- The effort has translated into progress -->
 Implementation of HIV prevention and treatment has significantly reduced the number of new HIV infections and AIDS-related deaths per year since their respective peaks (Figure \@ref(fig:overall-picture)).
-The most significant evidence-based interventions, in approximately chronological order of their introduction, are described below:
+The most significant evidence-based interventions, in more or less chronological order of introduction, are described below:
 
 * Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as *Chlamydia trachomatis*, *Neisseria gonorrhoeae*, syphilis, and *Trichomonas vaginalis*.
 Condom usage has increased significantly since 1990, which is estimated to have averted `r custom_numbers_to_words(condom_infections_averted)` new HIV infections [@stover2021impact].
-There remain significant but difficult to close gaps in condom usage.
+However, there remain significant but difficult to close gaps in condom usage.
 
 * Antiretroviral therapy (ART) is a combination of drugs which stop the virus from replicating in the body.
 A person living with HIV who takes ART daily can live a full and healthy life, transforming what was once a terminal illness to a treatable chronic condition.
@@ -99,7 +99,7 @@ The number of AIDS-related deaths, `r custom_numbers_to_words(art_deaths_averted
   ART reduces the amount of virus in the blood and genital secretions.
   If the virus is undetectable then there is significant evidence that it cannot be transmitted sexually [@cohen2011prevention; @broyles2023risk].
   For this reason, in addition to providing life saving treatment, ART also operates as prevention.
-  Approaches to lowering risk of HIV transmission this way are referred to as treatment as prevention (TaSP).
+  Approaches to lowering risk of HIV transmission in this way are referred to as treatment as prevention (TaSP).
   Particular efforts have been made to provide pregnant women with ART to reduce the chance of mother-to-child transmission (MTCT) [@siegfried2011antiretrovirals].
 
 * Voluntary medical male circumcision (VMMC) partially protects against female-to-male HIV acquisition.
@@ -110,18 +110,18 @@ Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretroviral drugs which can be taken before and after exposure to prevent transmission.
 PrEP has been shown to be effective at an individual-level across a number of RCTs [@baeten2012antiretroviral; @thigpen2012antiretroviral], but there are few population-level studies.
 Though PEP cannot be studied with RCTs, observational studies indicate it is highly effective [@dominguez2016updated].
-These medical interventions are more costly than some other options, so are primarily useful in high risk settings.
+These medical interventions are more costly than other prevention options, so are primarily useful in high risk settings.
 
-Though important progress had been made, facilitated by the interventions above, there remains much more to do.
-In 2022, `r custom_numbers_to_words(infections2022)` people were newly infected with HIV and there were `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one every minute [@unaids2022global].
-Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030.
+Though implementation of the above interventions has enabled important progress to be made, there remains much more to do.
+In 2022, `r custom_numbers_to_words(infections2022)` people were newly infected with HIV and there were `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one death every minute [@unaids2022global].
+Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030 [@assembly2016political].
 To meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a potential shortfall in HIV funding, renewed commitments are required [@economist2023triple].
 
 <!-- Prioritisation of interventions  -->
-For available resources to have the greatest impact, it is important that the right HIV interventions to be prioritised to the right populations, in the right place, and at the right time.
+For available resources to have the greatest impact, it is important that the right HIV interventions are prioritised to the right populations, in the right place, and at the right time.
 By analogy to precision medicine, this paradigm has been termed precision public health [@khoury2016precision].
-While precision medicine tailors treatments to the individual, precision public health tailors treatments to the population.
-Differences in the cost-effectiveness of any given intervention can be vast, with some interventions orders of magnitude more impactful than others [@ord2013moral].
+While precision medicine tailors treatments to individuals, precision public health tailors treatments to populations.
+The importance of precision public health is underscored by the vast potential differences in the cost-effectiveness of any given intervention, with some interventions orders of magnitude more impactful than others [@ord2013moral].
 
 (ref:naomi-continent) Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. The estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS, and are available from @unaids2023aidsinfo. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria were not published. Data collection in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model.
 
