Small rewording in the mid-section of Chapter 2

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -134,9 +134,10 @@ Disease burden varies substantially across multiple spatial scales.
 In some countries, the epidemic is concentrated in small populations, and national HIV prevalence is low.
 In others, the epidemic is sustained by heterosexual transmission, and national HIV prevalence is higher (typically >1%)
 These two epidemic settings are sometimes described as concentrated and generalised, respectively.
-Most of the countries severely affected by HIV are in sub-Saharan Africa (SSA).
+Most countries severely affected by HIV are in sub-Saharan Africa (SSA).
 It is estimated that `r round(ssa_plhiv2022 / plhiv2022 * 100)`% of the `r custom_numbers_to_words(plhiv2022)` PLHIV worldwide live in SSA.
-Adult HIV prevalence (ages 15-49) is above 10% in some countries in southern Africa, with some districts even exceeding 20% (Figure \@ref(fig:naomi-continent)).
+HIV prevalence in adults aged 15-49 is above 10% in some countries in southern Africa.
+Some districts even exceed 20% (Figure \@ref(fig:naomi-continent)).
 Indeed, just as there is variation between countries, there is variation within countries.
 As an illustration, adult HIV prevalence at the district municipality level in South Africa ranges from `r 6`% in Namakwa to `r 30`% in uMkhanyakude.
 Accordingly, the work in this thesis is centred on measurement of HIV at the district level in SSA.
@@ -167,8 +168,8 @@ Important indicators to measure include:
 * **HIV prevalence** is the proportion $\rho \in [0, 1]$ of a population who have HIV.
 The number of PLHIV is given by $N\rho$, where $N$ is the (living) population size.
 Increases in HIV prevalence, and the number of PLHIV, can be caused either by new HIV infections or more PLHIV remaining alive by taking treatment.
-For this reason it is important to take caution in directly interpreting changes in HIV prevalence.
-Nonetheless, as a primary measure of population disease burden, HIV prevalence is crucial in calculating all of the other indicators given below.
+For this reason caution should be taken in directly interpreting changes in HIV prevalence.
+Nonetheless, as a primary measure of population disease burden, HIV prevalence is vital in calculating all of the other indicators given below.
 
 * **HIV incidence** is the rate $\lambda > 0$ of new HIV infections.
 In writing, HIV incidence is often given as a number of new infections per 1000 person years.
@@ -195,7 +196,7 @@ HIV diagnosis allows for linkage to care and progression along the HIV treatment
 
 ### Data {#hiv-data}
 
-Measuring the above HIV indicators requires data.
+Measuring the HIV indicators above requires data.
 To give the most complete picture of the epidemic, it is important to use multiple sources of data.
 The most prominent categories are:
 
