Small update to corrections template

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -13,7 +13,7 @@ output:
 
 \newpage
 
-# Examiner 1 {-}
+# Dr. Christopher Paciorek {-}
 
 ## Minor corrections {-}
 
@@ -37,7 +37,7 @@ output:
 
 \newpage
 
-# Examiner 2 {-}
+# Dr. Adam Sykulski
 
 ## Minor corrections {-}
 
