--- a/corrections/cover.Rmd
+++ b/corrections/cover.Rmd
@@ -12,14 +12,14 @@ knit: pagedown::chrome_print
 
 ::: from
 Adam Howes    
-Email: ath19@ic.ac.uk     
+Email: ath19@ic.ac.uk
 :::
 
 ::: date
-1st December, 2023
+5th March, 2024
 :::
 
-Dear examiners,
+Dear Dr Paciorek and Dr Sykulski,
 
 Thank you for taking the time to read my thesis "Bayesian spatio-temporal methods for small-area estimation of HIV indicators".
 I attach my response to the corrections.
